--- a/src/pages/infoCourses/style.css
+++ b/src/pages/infoCourses/style.css
@@ -67,31 +67,38 @@
 
 .coursesSlideProjects h2 {
 
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 
 }
 
-.courseGalery {
+.arrows{
 
-    width: 100vw;
+    width: 90vw;
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    flex-direction: column;
+    margin-top: 30px;
 
 }
 
-.projectInGalery {
-    
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+.arrows img {
+
+    height: 55px;
+    width: 55px;
 
 }
 
-.projectInGalery img  {
-    
-    width: 100px;
-    height: 100px;
+.arrow-left {
+
+    cursor: pointer;
+    user-select: none;
+
+}
+
+.arrow-right {
+
+    cursor: pointer;
+    user-select: none;
 
 }
 
@@ -106,10 +113,20 @@
 
 }
 
-.projectsCoursesDiv h1 {
+
+.projectsCoursesDiv img {
 
     /* width: 80%; */
-    margin-top: 10vh;
+    /* height: 10%; */
+
+}
+
+.projectsCoursesDiv h3 {
+
+    font-size: 11pt;
+    width: 80%;
+    /* margin-top: 50px; */
+    text-align: center;
 
 }
 
@@ -117,6 +134,14 @@
 
     width: 80%;
     text-indent: 2em;
+
+}
+
+.imgProjects {
+
+    height: auto;
+    max-height: 75%;
+    width: 80%;
 
 }
 
@@ -241,6 +266,19 @@
     .coursesSlideProjects h2 {
 
         font-size: 15pt;
+
+    }
+
+    .arrows {
+
+        width: 90vw;
+
+    }
+
+    .arrows img{
+
+        width: 40px;
+        height: 40px;
 
     }
 
