--- a/src/pages/blog/style.css
+++ b/src/pages/blog/style.css
@@ -7,7 +7,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: black;
+    /* background-color: black; */
     overflow-x: hidden;
     max-width: 100vw;
     width: 100vw;
@@ -23,6 +23,58 @@
     overflow-x: hidden;
     max-width: 100vw;
     width: 100vw;
+
+}
+
+#mainBlog h1 {
+
+    color: white;
+    background-color: black;
+    padding: 5px 10px;
+    border-radius: 3px;
+    text-align: center;
+    margin-bottom: 10vh;
+
+}
+
+.postDiv {
+
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    font-family: 'Montserrat', 'sans-serif';
+    /* background-color: rebeccapurple; */
+
+}
+
+.postDiv img{
+
+    max-width: 80%;
+    border-radius: 10px;
+
+}
+
+.postDiv h3 {
+
+    font-size: 22pt;
+
+}
+
+.postDiv h5{
+
+    font-size: 13pt;
+
+}
+
+.postDiv p{
+
+    width: 80%;
+    color: black;
+    text-align: justify;
+    text-indent: 2em;
+    /* background-color: rebeccapurple; */
 
 }
 
@@ -149,4 +201,14 @@
 
     }
 
+}
+
+@media screen and (max-width: 768px) {
+
+    #mainBlog h1 {
+
+        font-size: 14pt;
+
+    }
+    
 }
