--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -334,6 +334,7 @@ html {
     flex-direction: column;
     margin-top: 15vh;
     margin-bottom: 30vh;
+    /* background-color: #DBB826; */
 
 }
 
