--- a/src/pages/blog/style.css
+++ b/src/pages/blog/style.css
@@ -84,6 +84,7 @@
     color: black;
     text-align: justify;
     text-indent: 2em;
+    white-space: pre-line;
 
 }
 
@@ -101,6 +102,23 @@
     font-size: 10pt;
     border-radius: 5px;
     background-color: #DBB826;
+
+}
+
+.paragraphPost {
+
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: justify;
+
+}
+
+.paragraphPost p {
+
+    width: 100%;
+    text-align: justify;
 
 }
 
@@ -234,6 +252,23 @@
     #mainBlog h1 {
 
         font-size: 14pt;
+
+    }
+
+    .postDiv h3 {
+
+        width: 60%;
+        padding: 10px;
+        font-size: 18pt;
+        text-align: center;
+
+    }
+
+    .postDiv h5 {
+
+        font-size: 11pt;
+        text-indent: 2em;
+        text-align: justify;
 
     }
     
