--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -349,6 +349,28 @@ html {
 
 }
 
+.parceiros {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.parceirosLogos {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-right: 50px;
+}
+
+.parceirosLogos img {
+    width: 100%;
+    height: 50%;
+    display: flex;
+
+}
+
 .accountants {
 
     width: 80%;
