--- a/src/components/footer/footerStyle.css
+++ b/src/components/footer/footerStyle.css
@@ -97,6 +97,7 @@ footer {
         flex-direction: column;
         padding-bottom: 0;
 
+
     }
 
     .copyright {
@@ -154,6 +155,7 @@ footer {
         align-items: center;
         justify-content: center;
         padding: 0;
+        margin-top: 50px;
 
     }
 
