--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -346,6 +346,9 @@ html {
     flex-direction: column;
     text-align: justify;
     text-indent: 2em;
+    border-radius: 5px;
+    background-color: #f8f8f8;
+    padding: 10px;
 
 }
 
@@ -354,6 +357,11 @@ html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    border-radius: 5px;
+    background-color: #f8f8f8;
+    padding: 10px;
+    width: 80%;
+    margin-top: 30px;
 }
 
 .parceirosLogos {
@@ -361,14 +369,19 @@ html {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-right: 50px;
+    width: 80%;
+}
+
+.parceirosLogos a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 10px;
 }
 
 .parceirosLogos img {
     width: 100%;
     height: 50%;
-    display: flex;
-
 }
 
 .accountants {
@@ -511,6 +524,10 @@ html {
 
         margin-top: 10vh;
 
+    }
+
+    .parceirosLogos {
+        flex-direction: column;
     }
 
 }
